# sherlock

./: README.md  pyproject.toml
sherlock/: cli.py  config.py  dashboard.py  proxy.py
