[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sherlock"
version = "0.1.0"
description = "Track token usage for LLM CLI tools (Claude Code, Gemini, Codex)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "rich>=13.0.0",
    "tiktoken>=0.5.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
mitm = ["mitmproxy>=10.0.0", "prompt_toolkit>=3.0.0"]

[project.scripts]
sherlock = "sherlock.cli:main"

[tool.setuptools.packages.find]
where = ["."]
